# agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING  CONTRIBUTING.md  LICENSE  README  README.md  ROADMAP  install.sh  pyproject.toml  simulation_server_runner_COMPLETE.py  simulation_server_spec.py
.github/: labels.yml
.github/workflows/: publish-images.yml  release-please.yml  sync-labels.yml
Documentation/: README  README.md  architecture  architecture.md  cli.md  deployment  deployment.md  installation  installation.md  self-healing  self-healing.md
Documentation/api/: events  events.md  rest  rest.md  websocket  websocket.md
Documentation/examples/: README  README.md  cylindrical-cht  cylindrical-cht.md  inner-outer-pipe  inner-outer-pipe.md  u-shape-pipe  z-bend
Documentation/images/: README  README.md
Documentation/llm-providers/: adding-a-provider  adding-a-provider.md  gemini  gemini.md  ollama  vertex  vertex.md
Documentation/solvers/: README  README.md  adding-a-solver  adding-a-solver.md  multi-region-cht  multi-region-cht.md  multiphase  multiphase.md  single-region  single-region.md
FOR_SIMULATION_SERVER/: routes.py  runner.py
docker/: agent.Dockerfile  docker-compose.yml  frontend.Dockerfile  runner.Dockerfile
examples/: README  README.md
examples/cylindrical-cht/: README  README.md  prompt.txt
examples/inner-outer-pipe/: README  README.md  prompt.txt
examples/u-shape-pipe/: README  README.md  prompt.txt
examples/z-bend/: README  README.md  prompt.txt
scripts/: run_real_tests.sh  test_runner.py
simd_agent/: __init__.py  case_spec.py  chat_models.py  chat_service.py  chat_tools.py  code_verifier.py  config_normalizer.py  convergence.py  db.py  error_summarizer.py  event_bus.py  genai_codegen.py  linting.py  main.py  mesh_retriever.py  models.py  normalizer.py  orchestration.py  packaging.py  planning.py  precheck.py  precheck_models.py  progress_store.py  sandbox_client.py  settings.py  simulation_server_client.py  solver_docs.py  solver_selector.py  store.py  telemetry.py  watch_bus.py
simd_agent/api/: __init__.py  auth.py  chat.py  meshes.py  precheck_lint.py  projects.py  reports.py  runs.py  simulations.py  snapshot.py  solvers.py  users.py
simd_agent/chat/: __init__.py  db.py  models.py  prompts.py  query_analyzer.py  service.py  tools.py
simd_agent/cli/: __init__.py  __main__.py  client.py  config.py  down.py  init.py  ls.py  main.py  process.py  run.py  status.py  stop.py  up.py  watch.py
simd_agent/db/: __init__.py
simd_agent/llm/: __init__.py  base.py  registry.py
simd_agent/mesh/: __init__.py  cell_zones.py  config.py  converters.py  debug.py  routes.py  utils.py
simd_agent/precheck/: __init__.py  models.py  service.py
simd_agent/prompts/: __init__.py
simd_agent/repositories/: __init__.py  base.py  chat_repo.py  config_repo.py  event_repo.py  lint_repo.py  mesh_repo.py  patch_repo.py  precheck_repo.py  progress_repo.py  report_repo.py  run_repo.py  simulation_repo.py  user_repo.py
simd_agent/run/: __init__.py  apply_recommendation.py  case_spec.py  code_verifier.py  config_normalizer.py  error_summarizer.py  event_bus.py  genai_codegen.py  linting.py  mesh_retriever.py  normalizer.py  orchestration.py  packaging.py  planning.py  region_extractor.py  region_lint.py  simulation_server_client.py  solver_docs.py  solver_selector.py
simd_agent/schemas/: __init__.py  chat.py  mesh.py  precheck.py  run.py  simulation.py  user.py
simd_agent/services/: __init__.py  chat_service.py  run_service.py  simulation_service.py  snapshot_service.py  user_service.py
simd_agent/solvers/: base.py  (+6 more)
test_mesh/: gen_u_2d.py  gen_u_3d.py  render_preview.py  render_u_preview.py
tests/: __init__.py  conftest.py  test_buoyant_boussinesq_solvers.py  test_case_spec_case_defaults.py  test_case_spec_resolvers.py  test_case_spec_strategies.py  test_chat_tools.py  test_cht_phase2.py  test_cht_phase3_pipeline.py  test_cht_skeleton.py  test_codegen_real.py  test_compressible_bounds.py  test_compressible_relaxation_and_rhomin.py  test_condition_aware_startup.py  test_config_normalizer.py  test_db_connection.py  test_enrichment_case_defaults.py  test_enrichment_inlet_bcs.py  test_enrichment_pipeline.py  test_enrichment_region_fluid_presets.py  test_enrichment_region_inits.py  test_enrichment_turbulence_bcs.py  test_enrichment_wall_bcs.py  test_fv_build_context.py  test_gamg_coarsest_cells.py  test_integration_real.py  test_linting.py  test_multi_region_bcs.py  test_multi_region_isolation.py  test_orchestration_mock.py  test_outlet_inlet_bc_fixers.py  test_packaging.py  test_phase4_deterministic_files.py  test_physics_turbulence_invariant.py  test_pimple_final_coverage.py  test_planning.py  test_region_extractor.py  test_region_lint.py  test_residual_and_energy_solver.py  test_rhopimplefoam_of_alignment.py  (+8 more)
(+473 files in other folders)
