[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simd_agent"
version = "0.1.0"
description = "FastAPI service for orchestrating CFD workflows via WebSockets"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SIMD Team"}
]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "codegen @ git+https://github.com/simd-ai/codegen.git",
    "google-genai>=1.0.0",
    "python-multipart==0.0.19",
    "numpy>=2.0.0",
    "pyvista>=0.45.0",
    "meshio>=5.3.5",
    "gmsh>=4.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["simd_agent"]
