[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simd_agent"
version = "0.1.0"
description = "FastAPI service for orchestrating CFD workflows via WebSockets"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SIMD Team"}
]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "google-genai>=1.0.0",
    "ollama>=0.4.0",
    "python-multipart==0.0.19",
    "zstandard>=0.22.0",
    "google-cloud-storage>=2.14.0",
    "numpy>=2.0.0",
    "pyvista>=0.45.0",
    "meshio>=5.3.5",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-n 30"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.hatch.metadata]
allow-direct-references = true

# ── Type checking ──────────────────────────────────────────────────────────
# Strict mode is enabled on the **renderer modules** — the parts of the
# codebase that consume the typed FvBuildContext / strategy schemas and emit
# OpenFOAM dict text.  Phase 3 of the LLM/validator-boundary redesign.
#
# Strict on these modules guarantees:
#   • No untyped `dict[str, Any]` returned from helpers
#   • Every ctx field access is checked against FvBuildContext
#   • Strategy fields keep their Literal narrowing through renderers
#
# Run locally:
#   mypy --strict simd_agent/solvers/contexts.py \
#                 simd_agent/run/case_spec/strategies.py \
#                 simd_agent/run/case_spec/resolvers.py \
#                 simd_agent/solvers/*/solver.py
[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Phase 3 strict modules — the resolved-strategy contract.
module = [
    "simd_agent.solvers.contexts",
    "simd_agent.run.case_spec.strategies",
    "simd_agent.run.case_spec.resolvers",
    "simd_agent.solvers.simpleFoam.solver",
    "simd_agent.solvers.pimpleFoam.solver",
    "simd_agent.solvers.rhoSimpleFoam.solver",
    "simd_agent.solvers.rhoPimpleFoam.solver",
    "simd_agent.solvers.buoyantSimpleFoam.solver",
    "simd_agent.solvers.buoyantPimpleFoam.solver",
]
strict = true
disallow_any_generics = true
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true

[tool.hatch.build.targets.wheel]
packages = ["simd_agent"]
